[package]
name = "translation-xml-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
quick-xml = { version = "0.26.0", features = ["serialize"] }
zip = "0.6.2"
calamine = "0.18.0"
fancy-regex = "0.10.0"
