[package]
name = "translation-xml-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
zip = "0.6.5"
calamine = "0.19.1"
fancy-regex = "0.11.0"
